--- a/pages/explorer_faucet.html
+++ b/pages/explorer_faucet.html
@@ -168,8 +168,15 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="explorer-and-faucet"><a class="header" href="#explorer-and-faucet">Explorer and Faucet</a></h1>
-<p>To view transactions you can use: https://explorer.iota.org/chrysalis</p>
-<p>To fund an address you can use https://faucet.testnet.chrysalis2.com or https://faucet.tanglekit.de</p>
+<p>To view transactions you can use:</p>
+<ul>
+<li>https://explorer.iota.org/chrysalis</li>
+</ul>
+<p>To fund an address you can use: </p>
+<ul>
+<li>https://faucet.testnet.chrysalis2.com</li>
+<li>https://faucet.tanglekit.de</li>
+</ul>
 
                     </main>
 
