deploy: 66bf06b6cc85c07161262120a7b69e0b2806d523

--- a/pages/testing_cli.html
+++ b/pages/testing_cli.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../pages/welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="../pages/relation.html"><strong aria-hidden="true">2.</strong> Relation between IOTA and Rosetta</a></li><li class="chapter-item expanded "><a href="../pages/deployment.html"><strong aria-hidden="true">3.</strong> Deployment</a></li><li class="chapter-item expanded "><a href="../pages/testing_cli.html" class="active"><strong aria-hidden="true">4.</strong> Testing with rosetta-cli</a></li><li class="chapter-item expanded "><a href="../pages/testing_curl.html"><strong aria-hidden="true">5.</strong> Testing with curl</a></li><li class="chapter-item expanded "><a href="../pages/explorer_faucet.html"><strong aria-hidden="true">6.</strong> Explorer and Faucet</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../pages/welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="../pages/deployment.html"><strong aria-hidden="true">2.</strong> Deployment</a></li><li class="chapter-item expanded "><a href="../pages/testing_cli.html" class="active"><strong aria-hidden="true">3.</strong> Testing with rosetta-cli</a></li><li class="chapter-item expanded "><a href="../pages/testing_curl.html"><strong aria-hidden="true">4.</strong> Testing with curl</a></li><li class="chapter-item expanded "><a href="../pages/explorer_faucet.html"><strong aria-hidden="true">5.</strong> Explorer and Faucet</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -192,7 +192,7 @@ Also ensure that the REST API of the IOTA is available at http://localhost:14265
 <li><code>ROSETTA_CLI_INSTALL=1</code> ...installs rosetta-cli</li>
 <li><code>BOOTSTRAP_BALANCES=1</code> ...deletes the rosetta-cli storage, downloads the latest available IOTA snapshot and bootstraps balances</li>
 <li><code>NO_BOOTSTRAP=1</code> ...keeps the rosetta-cli storage</li>
-<li><code>NODE_URL=1</code> ...the URL to the REST API of the started IOTA node.  </li>
+<li><code>NODE_URL=http://localhost:14265</code> ...the URL of the REST API from the IOTA node.  </li>
 </ul>
 
                     </main>
