--- a/print.html
+++ b/print.html
@@ -180,6 +180,7 @@
 </ul>
 <h2 id="license"><a class="header" href="#license">License</a></h2>
 <p><code>rosetta-iota</code> is released under the Apache License 2.0.</p>
+<h1 id="deployment"><a class="header" href="#deployment">Deployment</a></h1>
 <h2 id="iota-nodes"><a class="header" href="#iota-nodes">IOTA nodes</a></h2>
 <p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">Bee</a>) are able to start up from a recent block instead of having to synchronize from genesis. This can be achieved by bootstrapping the node with recent <a href="https://github.com/luca-moser/protocol-rfcs/blob/local-snapshot-file-format/text/0000-local-snapshot-file-format/0000-local-snapshot-file-format.md">snapshots</a>. 
 Also, IOTA full-nodes are able to prune history from time to time in a safe way.
@@ -209,8 +210,9 @@ Also, IOTA full-nodes are able to prune history from time to time in a safe way.
 </ol>
 <p>Once the HORNET node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
 <p>The REST API of the HORNET node will be available at: http://localhost:14265/api/v1/info</p>
-<p>The HORNET node will be bootstrapped automatically with recent snapshots to start synchronizing from a recent block. The snapshots will be automatically downloaded from https://dbfiles.testnet.chrysalis2.com. <strong>If you want to bootstrap the HORNET node yourself with custom snapshots, put them in the <code>data/snapshots/</code> directory.</strong></p>
+<p>The HORNET node will be bootstrapped automatically with recent snapshots to start synchronizing from a recent block. <strong>The snapshots will be automatically downloaded from https://dbfiles.testnet.chrysalis2.com. If you want to bootstrap the HORNET node yourself with custom snapshots, put them in the <code>data/snapshots/testnet</code> directory.</strong></p>
 <h1 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h1>
+<h2 id="testing-on-testnet"><a class="header" href="#testing-on-testnet">Testing on testnet</a></h2>
 <p>The provided scripts <code>check_data_testnet.sh</code> and <code>check_construction_testnet.sh</code> build on top of rosetta-cli. They help with bootstrapping rosetta-cli and make sure that rosetta-cli is runs with the correct configuration values.</p>
 <ol>
 <li>
@@ -233,8 +235,8 @@ Also ensure that the REST API of the IOTA is available at http://localhost:14265
 <p>The testing scripts make use of following environment variables:</p>
 <ul>
 <li><code>ROSETTA_CLI_INSTALL=1</code> ...installs rosetta-cli</li>
-<li><code>BOOTSTRAP_BALANCES=1</code> ...deletes the rosetta-cli storage, downloads the latest available IOTA snapshot and bootstraps balances</li>
-<li><code>NO_BOOTSTRAP=1</code> ...keeps the rosetta-cli storage</li>
+<li><code>BOOTSTRAP_BALANCES=1</code> ...deletes the rosetta-cli storage, downloads the most recent snapshots, bootstraps balances and starts synchronizing from the snapshot state</li>
+<li><code>NO_BOOTSTRAP=1</code> ...keeps the rosetta-cli storage and continues to synchronize from the available state</li>
 <li><code>NODE_URL=http://localhost:14265</code> ...the URL of the REST API from the IOTA node.  </li>
 </ul>
 <h1 id="testing-with-curl"><a class="header" href="#testing-with-curl">Testing with curl</a></h1>
