--- a/pages/testing_cli.html
+++ b/pages/testing_cli.html
@@ -180,10 +180,10 @@
 <p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
 Also ensure that the REST API of the IOTA is available at http://localhost:14265/api/v1/info.</p>
 <p>To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
-<p>Testing the Data API <strong>(Testnet)</strong>:</p>
+<p>Testing the Data API <strong>(testnet)</strong>:</p>
 <pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_data_testnet.sh
 </code></pre>
-<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
+<p>Testing the Construction API <strong>(testnet)</strong>:</p>
 <pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_construction_testnet.sh
 </code></pre>
 </li>
